<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">WallReel</string>
    <string name="wallpaper_desc">Turns photos from your selected album into wallpapers with a timer and shuffle. Double-tap on the home screen to jump to the next one.</string>
    <string name="widget_next_desc">WallReel: next photo</string>
    <string name="widget_medium_desc">WallReel: previous and next photo</string>
    <string name="widget_large_desc">WallReel: photos, shuffle and double-tap controls</string>
    <string name="widget_quick_controls_desc">WallReel: quick wallpaper controls</string>
    <string name="widget_prev_label">‹ Prev</string>
    <string name="widget_next_label">Next ›</string>
    <string name="widget_quick_next_label">Next</string>
    <string name="widget_quick_shuffle_label">Shuffle</string>
    <string name="widget_quick_album_empty">Album -</string>
    <string name="widget_quick_fill_label">Fill</string>
    <string name="widget_quick_fit_label">Fit</string>
</resources>
